[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbase-observability"
version = "0.4.0"
description = "Brainbase shared observability: structlog + contextvar correlation. Stdout-only; platform forwards logs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brainbase Labs", email = "engineering@brainbaselabs.com" }]
keywords = ["logging", "observability", "structlog", "contextvars"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# v0.4.0 — shipping layer removed. structlog + httpx (for outbound
# correlation-header propagation in observability.http) are the only
# required runtime deps.
dependencies = [
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
aiohttp = ["aiohttp>=3.9.0"]

[project.urls]
Homepage = "https://github.com/BrainbaseHQ/brainbase-observability"
Issues = "https://github.com/BrainbaseHQ/brainbase-observability/issues"

[tool.setuptools]
packages = ["observability"]
